<resources>
    <string name="app_name">دربست راننده 2</string>
    <string name="StartOrigin">نقطه شروع</string>
    <string name="EndOrigin">نقطه پایان</string>
    <string name="origin">مبدأ</string>
    <string name="SubmitOrigin">تایید مبدأ</string>
    <string name="destination">مقصد</string>
    <string name="SubmitDestination">تایید مقصد</string>
    <string name="SecondDestination">مقصد دوم</string>
    <string name="SubmitSecondDestination">تایید مقصد دوم</string>
    <string name="typeDarbast">نوع دربست</string>
    <string name="interCityTaxi">تاکسی درون شهری</string>
    <string name="suburbanTaxi">تاکسی برون شهری</string>
    <string name="pickupBar">وانت بار</string>
    <string name="moreOptions">گزینه های بیشتر</string>
    <string name="discountCode">کد تخفیف</string>
    <string name="getDarbast">درخواست دربست</string>
    <string name="account">حساب کاربری</string>
    <string name="SignInOrSignUp">ورود / ثبت نام</string>
    <string name="SignInOrSignUpCaption">برای ارسال کد تایید شماره خود را وارد کنید</string>
    <string name="EnterPhoneNumber">شماره تلفن خود را وارد کنید</string>
    <string name="EnterCode">کد تایید را وارد کنید</string>
    <string name="SendCode">ارسال کد تایید</string>
    <string name="Submit">تایید</string>
    <string name="SmsCode">کد تایید</string>
    <string name="unknown_error">خطای نامشخص</string>
    <string name="completeSpecifications">تکمیل مشخصات</string>
    <string name="enterNameFamily">لطفا نام و نام خانوادگی خود را وارد کنید</string>
    <string name="enterName">نام خود را وارد کنید</string>
    <string name="Name">نام</string>
    <string name="enterFamily">نام خانوادگی خود را وارد کنید</string>
    <string name="Family">نام خانوادگی</string>
    <string name="completeSignup">تکمیل ثبت نام</string>
    <string name="sendAgainCode">دریافت مجدد کد</string>
    <string name="sendAgainCodeSuccessfully">کد تایید مجدد ارسال شد</string>
    <string name="sendAgainCodeError">برای درخواست مجدد کد %1$d ثانیه صبر کنید</string>
    <string name="sendCodeSuccessfully">کد تایید به شماره %1$s ارسال شد</string>
    <string name="moreOptionsTrip">گزینه های سفر</string>
    <string name="selectSecondDestination">انتخاب مقصد دوم</string>
    <string name="sweep">رفت و برگشت به مبداّ</string>
    <string name="stopOnTheWay">توقف در مسیر</string>
    <string name="canNotDisableMoreOptionOnTheWay">هنگام سفر امکان غیرفعال کردن گزینه ها وجود ندارد</string>
    <string name="EnterDiscountCode">کد تخفیف را وارد کنید</string>
    <string name="SubmitDiscountCode">ثبت کد</string>
    <string name="userProfile">پروفایل کاربری</string>
    <string name="UserInformation">مشخصات فردی</string>
    <string name="submitEdits">ثبت تغییرات</string>
    <string name="descriptionReferal">شما میتوانید با دعوت دوستان خود به دربست از تخفیف های ویژه ای بهره مند شوید</string>
    <string name="numOfInvite">تعداد افرادی که دعوت کردید: %1$d</string>
    <string name="referalCode">کد دعوت شما: %1$s</string>
    <string name="referalCodeSend">کد دعوت به اپلیکیشن دربست: %1$s</string>
    <string name="shareReferalCode">اشتراک گذاری کد دعوت</string>
    <string name="editSubmtiSuccessfully">تغییرات با موفقیت ثبت شد</string>
    <string name="locationAlertTitle">سیستم موقعیت یاب</string>
    <string name="locationAlert">موقعیت مکانی شما غیر فعال است.\nآیا مایلید آن را فعال کنید؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="search">جستجو</string>
    <string name="enterLocationName">مکان خود را وارد کنید</string>
    <string name="searchResult">نتایج جستجو</string>
    <string name="selectSeat">انتخاب صندلی</string>
    <string name="pleaseSelectSeat">تعداد صندلی خود را انتخاب کنید</string>
    <string name="pay">پرداخت</string>
    <string name="paySuccess">پرداخت شده</string>
    <string name="travelAccepted">سفر شما توسط راننده تایید شد !</string>
    <string name="carArrived">دربست شما رسید !</string>
    <string name="inTravel">درحال سفر !</string>
    <string name="closeDarbast">درحال یافتن نزدیکترین دربست !</string>
    <string name="cancelRequest">لغو درخواست</string>
    <string name="OutOfServiceRange">خارج از محدوده سرویس</string>
    <string name="exitAccount">خروج از حساب</string>
    <string name="womenTaxi">تاکسی بانوان</string>
    <string name="menTaxi">تاکسی آقایان</string>
    <string name="bikeDelivery">پیک موتوری</string>
    <string name="darbast_rules">سیاست های حفظ حریم خصوصی دربست</string>
    <string name="rules">دربست معتقد است اصول حفظ حریم شخصی و اطلاعات کاربران بسیار مهم و حساس است.\n
شما با وارد کردن شماره و نام و نام خانوادگی ثبت نام میکنید و این اطلاعات را در اختیار دربست قرار میدهید\n
دربست از این اطلاعات وقتی شما درخواست سرویس میکنید (تاکسی درون شهری، تاکسی برون شهری، وانت بار، پیک موتوری و…) استفاده میکند\n
دربست نام و نام خانوادگی و شماره تماس شما را جایی منتشر نمیکند فقط موقع درخواست سرویس برای ارایه خدمات بهتر در این راستا این اطلاعات را به راننده نمایش میدهد.
</string>
    <string name="tryAgain">تلاش مجدد</string>
    <string name="cancelTravel">لغو سفر</string>
    <string name="cashPay">پرداخت نقدی</string>
    <string name="nonCashPayment">پرداخت غیر نقدی</string>
    <string name="onlinePayment">پرداخت آنلاین</string>
    <string name="moreOptionsAndPay">گزینه های بیشتر و پرداخت</string>
    <string name="yourDarbastArrived">دربست شما رسید!!</string>
    <string name="morePay">گزینه های پرداخت</string>
    <string name="payFromWallet">پرداخت از کیف پول</string>
    <string name="yourPaymentIsSuccessFull">پرداخت شما موفقیت آمیز بود</string>
    <string name="confirm">تایید</string>
    <string name="cancel">لغو</string>
    <string name="yourPaymentIsNotSuccessFull">خطا در شارژ کیف پول</string>
    <string name="doYouWantPayingAgain">آیا مایل به تلاش مجدد هستید؟</string>
    <string name="chargeWallet">شارژ کیف پول</string>
    <string name="AreYouSureForCancelTravel">آیا از لغو سفر خود مطمئن هستید؟</string>
    <string name="second">ثانیه</string>
    <string name="pleaseEnterYourPhoneNumberWiithZero">!لطفا شماره همراه خود را همراه با 0 وارد کنید</string>
    <string name="normalTaxi">تاکسی عادی</string>
    <string name="outCityTaxi">تاکسی برون شهری</string>
    <string name="truck">وانت و کامیون</string>
    <string name="peykmotori">پیک موتوری</string>
    <string name="wrongPhoneNumber">شماره موبایل اشتباه است؟</string>
    <string name="navigation_drawer_open">باز</string>
    <string name="navigation_drawer_close">بسته</string>
    <string name="home">خانه</string>
    <string name="messages">پیام ها</string>
    <string name="history">تاریخچه</string>
    <string name="setting">تنظیمات</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newVersion">نسخه جدید نرم افزار هم اکنون در دسترس است</string>
    <string name="cancel2">لغو</string>
    <string name="exitFromSystem">خروج از حساب کاربری</string>
    <string name="exitMessage">آیا از خروج خود مطمئن هستید؟</string>
    <string name="lightTheme">تم روز</string>
    <string name="darkTheme">تم شب</string>
    <string name="darbastRequest">درخواست های دربست</string>
</resources>