<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backGroundActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.darbaast.driver.custom.DarbastToolbar
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:dt_title="@string/SignInOrSignUp"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_id_card" />

        <TextView
            android:textColor="@color/iconColor"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/completeSpecifications"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="?textAppearanceHeadline6"/>

        <TextView
            android:textColor="@color/iconColor"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/enterNameFamily"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:textAppearance="?textAppearanceBody2"
            android:alpha="0.7"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/enterName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/iconColor"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:id="@+id/edtNameComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textAppearance="?textAppearanceBody2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/familyInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/enterFamily"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameInputLayout"
           >

            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/iconColor"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:id="@+id/edtFamilyComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textAppearance="?textAppearanceBody2" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            app:cornerRadius="8dp"
            android:fontFamily="@font/primary_default"
            android:textColor="@color/black"
            android:id="@+id/btnCompleteSignup"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/familyInputLayout"
            android:layout_marginTop="15sp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/completeSignup"
            android:textAppearance="?textAppearanceBody2"
            />
        <ProgressBar
            android:id="@+id/progress_complete"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:indeterminateTint="@color/yellow"
            android:progress="60"
            app:indicatorColor="@color/yellow"
            android:layout_width="@dimen/allProgressbar"
            android:layout_height="@dimen/allProgressbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCompleteSignup" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>