<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.darbaast.driver.custom.DarbastToolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:dt_title="@string/account"
            android:background="@color/backgroundToolbar"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="13dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_smartphone" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/primary_default"
            android:text="@string/SignInOrSignUp"
            android:textAppearance="?textAppearanceHeadline6"
            android:textColor="@color/iconColor"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textColor="@color/iconColor"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.7"
            android:text="@string/SignInOrSignUpCaption"
            android:textAppearance="?textAppearanceBody2"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/EnterPhoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:startIconDrawable="@drawable/ic_round_phone_android_24">

            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/iconColor"
                android:id="@+id/edtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:textAppearance="?textAppearanceBody2" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:textColor="@color/iconColor"
            android:visibility="gone"
            android:id="@+id/txtWrongPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:padding="4dp"
            android:text="@string/wrongPhoneNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneInputLayout" />


        <LinearLayout
            android:visibility="gone"
            android:id="@+id/linear_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtWrongPhoneNumber">


            <TextView
                android:textColor="@color/iconColor"
                android:id="@+id/txt_sendCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/EnterCode"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_codeInputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:layoutDirection="rtl"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_sendCode">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:textColor="@color/iconColor"
                        android:id="@+id/edt_code5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:textColor="@color/iconColor"
                        android:id="@+id/edt_code4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:textColor="@color/iconColor"
                        android:id="@+id/edt_code3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:textColor="@color/iconColor"
                        android:id="@+id/edt_code2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:textColor="@color/iconColor"
                        android:id="@+id/edt_code1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"

                        />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <FrameLayout
                android:id="@+id/linear_digit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_codeInputs">

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progressBar_sendCodeFragment"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:indeterminate="false"
                    android:max="120"
                    android:progress="120"
                    app:indicatorSize="70dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linear_codeInputs" />

                <TextView
                    android:textColor="@color/iconColor"
                    android:id="@+id/txt_timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    tools:text="0" />

                <TextView
                    android:textColor="@color/iconColor"
                    android:id="@+id/txt_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/second"
                    android:textSize="11sp" />
            </FrameLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/primary_default"
            android:text="@string/SendCode"
            android:textAppearance="?textAppearanceBody2"
            android:textColor="@color/black"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_code" />


        <TextView
            android:textColor="@color/iconColor"
            android:id="@+id/tvDarbastRules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/darbast_rules"
            android:textAppearance="?textAppearanceSubtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSendPhoneNumber" />

        <View
            android:id="@+id/view"
            android:layout_width="190dp"
            android:layout_height="0.8dp"
            android:background="@color/black"
            app:layout_anchor="@+id/constraintLayout"
            app:layout_anchorGravity="center"
            app:layout_constraintEnd_toEndOf="@+id/tvDarbastRules"
            app:layout_constraintStart_toStartOf="@+id/tvDarbastRules"
            app:layout_constraintTop_toBottomOf="@+id/tvDarbastRules" />

        <ProgressBar
            android:id="@+id/progress_login"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            android:indeterminateTint="@color/yellow"
            android:progress="60"
            app:indicatorColor="@color/yellow"
            android:layout_width="@dimen/allProgressbar"
            android:layout_height="@dimen/allProgressbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDarbastRules" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>